<?xml version="1.0"?>
<package format="2">
  <name>keisuu_box_msgs</name>
  <version>0.1.0</version>
  <description>The keisuu_box_msgs package</description>
  <maintainer email="ktakeuchi@keisuu.co.jp">ktakeuchi</maintainer>
  <license>KEISUUGIKEN Inc.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
  </export>
</package>
